# ModuleQChart

./: CMakeLists.txt  Graphiques_en_US.qm  Graphiques_en_US.ts  Graphiques_fr_FR.qm  Graphiques_fr_FR.ts  README.md  drawgraph.cpp  drawgraph.hpp  graphiques.cpp  graphiques.hpp  graphiques.ui  main.cpp  ressources.qrc
docs_projet/: budget.csv  data.csv  data2.csv
